# wiki-ocr-dataset

./: .gitignore  Dockerfile  README.md  prepare_wiki_ocr_dataset.py  pyproject.toml  requirements.txt
