[project]
name = "wiki-ocr-dataset"
version = "0.1.0"
description = "Tools to prepare an OCR dataset from Wikipedia PDFs"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Dataset Generator" }
]
dependencies = [
  "aiohttp>=3.9,<4.0",
  "pdf2image>=1.17,<2.0",
  "Pillow>=10.0,<11.0",
  "tqdm>=4.66,<5.0",
]

[project.optional-dependencies]
dev = []

[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
package = true
